[package]
name = "robot_world_terraformed"
version = "0.1.0"
authors = ["pindell-matt <pindell.m@protonmail.com>"]

[dependencies]
diesel = { version = "0.15.2", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.7"
r2d2-diesel = "0.15"

[dev-dependencies]
parking_lot = {version = "0.4", features = ["nightly"]}
rand = "0.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]